--- a/UPS-OrgChart-WPF.csproj
+++ b/UPS-OrgChart-WPF.csproj
@@ -11,6 +11,8 @@
 
   <ItemGroup>
     <PackageReference Include="EPPlus" Version="8.1.0" />
+    <PackageReference Include="PDFsharp" Version="6.2.1" />
+    <PackageReference Include="PdfSharp.Xps" Version="1.0.0" />
     <PackageReference Include="PdfSharpCore" Version="1.3.67" />
   </ItemGroup>
 
